...
      "comment" : "Class = \"NSMenuItem\"; title = \"Icons\"; ObjectID = \"1Vd-bA-2RI\";",
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Icons"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Icons"
...
            "value" : "Alle löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Remove All"
          }
        }
      }
    },
    "8OF-yD-VoW.ibExternalAccessibilityDescription" : {
      "comment" : "Class = \"NSButton\"; ibExternalAccessibilityDescription = \"Top Left Corner\"; ObjectID = \"8OF-yD-VoW\";",
...
            "value" : "Obere linke Ecke"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Top Left Corner"
          }
        }
      }
    },
    "8OF-yD-VoW.ibShadowedToolTip" : {
      "comment" : "Class = \"NSButton\"; ibShadowedToolTip = \"Top Left Corner\"; ObjectID = \"8OF-yD-VoW\";",
...
            "value" : "Bannerfarbe"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Banner Color"
          }
        }
      }
    },
    "A7I-Lc-sjC.title" : {
      "comment" : "Class = \"NSTextFieldCell\"; title = \"Badge Size\"; ObjectID = \"A7I-Lc-sjC\";",
...
            "value" : "Erweiterung"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Extension"
          }
        }
      }
    },
    "AiC-Vb-wZE.title" : {
      "comment" : "Class = \"NSMenuItem\"; title = \"Quit Icons\"; ObjectID = \"AiC-Vb-wZE\";",
...
            "value" : "Obere rechte Ecke"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Top Right Corner"
          }
        }
      }
    },
    "cT6-x9-MeA.ibShadowedToolTip" : {
      "comment" : "Class = \"NSButton\"; ibShadowedToolTip = \"Top Right Corner\"; ObjectID = \"cT6-x9-MeA\";",
...
            "value" : "Banner speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Save Banner"
          }
        }
      }
    },
    "fh5-rF-qxu.ibShadowedToolTip" : {
      "comment" : "Class = \"NSButton\"; ibShadowedToolTip = \"Click here to save the current banner.\"; ObjectID = \"fh5-rF-qxu\";",
...
      "comment" : "Class = \"NSWindow\"; ibExternalAccessibilityDescription = \"Settings Window\"; ObjectID = \"joF-MB-AQJ\";",
      "extractionState" : "extracted_with_value",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Settings Window"
          }
        }
      },
      "shouldTranslate" : false
    },
    "JPg-8e-AJZ.title" : {
...
            "value" : "Icon-Set speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Save Icon Set"
          }
        }
      }
    },
    "n6G-PL-35N.ibShadowedToolTip" : {
      "comment" : "Class = \"NSButton\"; ibShadowedToolTip = \"Click here to swap banner color and text color.\"; ObjectID = \"n6G-PL-35N\";",
...
            "value" : "Installations-Icon"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Install Icon"
          }
        }
      }
    },
    "OFv-i7-9fr.ibExternalAccessibilityDescription" : {
      "comment" : "Class = \"NSButton\"; ibExternalAccessibilityDescription = \"Bottom\"; ObjectID = \"OFv-i7-9fr\";",
...
            "value" : "Installation"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Install"
          }
        }
      }
    },
    "OS9-sa-jHq.ibExternalAccessibilityDescription" : {
      "comment" : "Class = \"NSButton\"; ibExternalAccessibilityDescription = \"Bottom Left Corner\"; ObjectID = \"OS9-sa-jHq\";",
...
            "value" : "Deinstallation"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Uninstall"
          }
        }
      }
    },
    "P9O-mJ-1gA.title" : {
      "comment" : "Class = \"NSTextFieldCell\"; title = \"Max\"; ObjectID = \"P9O-mJ-1gA\";",
...
            "value" : "Standardeinstellungen für Finder-Erweiterung verwenden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Use default settings for Finder extension"
          }
        }
      }
    },
    "Y71-vW-jJH.title" : {
      "comment" : "Class = \"NSMenuItem\"; title = \"Hide Others\"; ObjectID = \"Y71-vW-jJH\";",
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Remove"
          }
        }
      }
    },
    "ySV-gN-eT9.ibExternalAccessibilityDescription" : {
      "comment" : "Class = \"NSView\"; ibExternalAccessibilityDescription = \"Uninstall Icon\"; ObjectID = \"ySV-gN-eT9\";",
...
            "value" : "Deinstallations-Icon"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Uninstall Icon"
          }
        }
      }
    },
    "YvZ-ox-dev.title" : {
      "comment" : "Class = \"NSMenu\"; title = \"Icons\"; ObjectID = \"YvZ-ox-dev\";",
...
            "value" : "Text des Banners"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Banner Text"
          }
        }
      }
    },
    "zt8-gk-fN2.title" : {
      "comment" : "Class = \"NSMenu\"; title = \"Edit\"; ObjectID = \"zt8-gk-fN2\";",
...
