...
            "value" : "Icon Ausgabegröße"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Icon Output Size"
          }
        }
      }
    },
    "2Qz-Bg-Fmo.title" : {
      "comment" : "Class = \"NSButtonCell\"; title = \"Auto-select output size\"; ObjectID = \"2Qz-Bg-Fmo\";",
...
            "value" : "Animiertes Deinstallations-Icon"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Animated Uninstall Icon"
          }
        }
      }
    },
    "jOE-3F-TAi.title" : {
      "comment" : "Class = \"NSButtonCell\"; title = \"Animated Uninstall Icon\"; ObjectID = \"jOE-3F-TAi\";",
...
            "value" : "Automatische Ausgabegröße"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Auto Output Size"
          }
        }
      }
    },
    "WVZ-Ag-E9H.ibExternalAccessibilityDescription" : {
      "comment" : "Class = \"NSButton\"; ibExternalAccessibilityDescription = \"Uninstall Icon\"; ObjectID = \"WVZ-Ag-E9H\";",
...
