...
    },
    "okButton" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
...
            "value" : "Öffnen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Open"
          }
        }
      }
    },
    "outputSize" : {
      "localizations" : {
...
            "value" : "Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "saveDialogMessage" : {
      "localizations" : {
...
